--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Admin Plan</title>
+    <title>Publishing</title>
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
@@ -57,7 +57,7 @@
             <ul class="navbar-right">
                 <li class="text-right"> Welcome <%= username %>  [<a href="./logout" style="padding:0px; margin:0px; display:inline;">Logout</a>]<br />
                     Last visted on :<%= lastlogin %> <br />
-                    Icon Management   <%= userrole %> </li>
+                    Publishing   <%= userrole %> </li>
             </ul>
         </div>
         <!-- /.container -->
