page listing in publishing

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,9 +78,11 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/controller/users.js"></script>
 <script src="scripts/controller/addPage.js"></script>
+<script src="scripts/controller/listPage.js"></script>
 <script src="scripts/helpers/common.js"></script>
 <script src="scripts/services/users.service.js"></script>
 <script src="scripts/services/page.service.js"></script>
+<script src="scripts/services/listpage.service.js"></script>
  
 
   
