--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,10 +78,11 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/controller/users.js"></script>
 <script src="scripts/controller/addPage.js"></script>
+<script src="scripts/controller/mapPackage.js"></script>
 <script src="scripts/helpers/common.js"></script>
 <script src="scripts/services/users.service.js"></script>
 <script src="scripts/services/page.service.js"></script>
- 
-
+<script src="scripts/services/mapPackage.service.js"></script>
+<script src="scripts/directives/rangeDirective.js"></script>
   
 </html>
