--- a/views/index.ejs
+++ b/views/index.ejs
@@ -80,12 +80,12 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/controller/users.js"></script>
 <script src="scripts/controller/addPage.js"></script>
-<<<<<<< HEAD
 <script src="scripts/controller/mapPackage.js"></script>
 <script src="scripts/helpers/common.js"></script>
 <script src="scripts/services/users.service.js"></script>
 <script src="scripts/services/page.service.js"></script>
 <script src="scripts/services/mapPackage.service.js"></script>
+<script src="scripts/services/listpage.service.js"></script>
 <script src="scripts/directives/rangeDirective.js"></script>
 <script src="scripts/controller/listPage.js"></script>
 </html>
