--- a/public/partials/PageListing.html
+++ b/public/partials/PageListing.html
@@ -91,7 +91,7 @@
                                         <td class="col-md-3 col-xs-3">
                                             <div class="row">
                                                 <div class="col-md-3 col-xs-3"><a href="" data-ng-click="EditPage(detail.pp_id)" title="Edit"><i class="fa fa-edit" title="Edit"></i></a></div>
-                                                <div class="col-md-3 col-xs-3"><a href="" data-ng-click="MapPlan(plan.planid,plan.contenttype)" title="Map"><i class="fa fa-external-link" title="Map"></i></a></div>
+                                                <div class="col-md-3 col-xs-3"><a href="" data-ng-click="MapPage(detail.pp_id)" title="Map"><i class="fa fa-external-link" title="Map"></i></a></div>
 
                                                 <!-- <div class="col-md-3 col-xs-4"><a href="" data-ng-click="DeletePlan(plan.planid,plan.contenttype)"><i class="glyphicon glyphicon-remove" title="Delete"></i></a></div>-->
                                                 <!--<div class="col-md-3 col-xs-4" data-ng-show="IsDisable" data-ng-if="plan.active == 1" class="text-right"><a href="" title="Click To Block" data-ng-click="BlockUnBlockPlan(plan.planid,plan.contenttype,plan.active)"><i class="fa fa-ban text-right red" style="color: green;"></i></a></div>-->
@@ -108,13 +108,13 @@
                         <div class="row">
                             <div class="col-md-12 col-xs-12">
                                 <div class="col-xs-3 col-md-3">
-                                    <button type="button" class="btn btn-primary btn-w-xs" title="Previous" data-ng-disabled="listcurrentPage == 0" data-ng-click="listcurrentPage=listcurrentPage-1">Previous</button>
+                                    <button type="button" class="btn btn-primary btn-w-xs" title="Previous" data-ng-disabled="listcurrentPage == 0 || disable_btn " data-ng-click="listcurrentPage=listcurrentPage-1">Previous</button>
                                 </div>
                                 <div class="col-xs-6 col-md-6">
                                     <button type="button" style="margin-left:32%" class="btn btn-primary btn-w-xs" ng-show="pageDetails.length > 0" title="Download" data-ng-click="ExportPageList()">Download List</button>
                                 </div>
                                 <div class="col-xs-3 col-md-3 text-right">
-                                    <button type="button" class="btn btn-primary btn-w-xs" title="Next" data-ng-disabled="listcurrentPage >= pageDetails.length/listpageSize - 1" data-ng-click="listcurrentPage=listcurrentPage+1">Next</button>
+                                    <button type="button" class="btn btn-primary btn-w-xs" title="Next" data-ng-disabled="listcurrentPage >= pageDetails.length/listpageSize - 1 || disable_btn " data-ng-click="listcurrentPage=listcurrentPage+1">Next</button>
                                 </div>
                             </div>
                         </div>
