--- a/views/account-login.ejs
+++ b/views/account-login.ejs
@@ -48,13 +48,14 @@
                 <label style="color: red;"><%= error %></label>
                 <form class="form account-form" action="/accountlogin" method="post">
                     <div class="form-group">
+                        <b><center style="font-size:15px;padding-bottom:20px;">Publishing - Login</center></b>
                         <label for="login-username" class="placeholder-hidden">Username</label>
-                        <input type="text" class="form-control" name="username" id="username" placeholder="Username" tabindex="1">
+                        <input type="text" class="form-control" name="username" maxlength="50" id="username" placeholder="Username" tabindex="1">
                     </div>
                     <!-- /.form-group -->
                     <div class="form-group">
                         <label for="login-password" class="placeholder-hidden">Password</label>
-                        <input type="password" class="form-control" name="password" id="password" placeholder="Password" tabindex="2">
+                        <input type="password" class="form-control" name="password" maxlength="50" id="password" placeholder="Password" tabindex="2">
                     </div>
                     <!-- /.form-group -->
                     <div class="form-group clearfix">
