--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,7 +57,7 @@
 
             <ul class="navbar-right">
                 <li class="text-right"> Welcome <%= username %>  [<a href="./logout" style="padding:0px; margin:0px; display:inline;">Logout</a>]<br />
-                    Last visted on :<%= lastlogin %> <br />
+                    Last visited on :<%= lastlogin %> <br />
                     Publishing   <%= userrole %> </li>
             </ul>
         </div>
