--- a/public/partials/add-page.html
+++ b/public/partials/add-page.html
@@ -9,6 +9,7 @@
             </span>
             <span class="col-sm-offset-3 col-sm-9" data-ng-show="successvisible" style="color: green;">     {{success}}
             </span>
+            
             <form method="post" class="form-horizontal" role="form" name="pageForm" data-ng-submit="submitForm(pageForm.$valid)" novalidate>
                 <div class="row">
                     <div class="col-md-6">
@@ -61,7 +62,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-sm-offset-5 col-sm-7">
-                                <button type="submit" ng-disabled="!pageForm.$valid" class="btn btn-primary btn-w-md" title="Save">Submit</button>
+                                <button type="submit" ng-disabled="!pageForm.$valid || editInProgress" class="btn btn-primary btn-w-md" title="Save">Submit</button>
                                 <button type="reset" ng-hide="edit_mode" class="btn btn-default btn-w-md" title="Reset" data-ng-click="resetForm()">Reset</button>
                             </div>
                         </div>
