--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -144,3 +144,11 @@ display:none;
     /* visibility: hidden; */
     z-index: 999;
 }
+
+
+.map_td_scrollable{
+    white-space: nowrap;display: inline-flex;overflow-x: scroll; width: 500px;
+}
+.map_td_not_scrollable{
+    white-space: nowrap;display: inline-flex; width: 500px;
+}
