--- a/public/partials/map-package.html
+++ b/public/partials/map-package.html
@@ -1,3 +1,4 @@
+{{mapPackageForm.$valid}}
 <form method="post" class="form-horizontal" role="form" name="mapPackageForm" data-ng-submit="submitForm(mapPackageForm.$valid)" novalidate>
     <div class="row" style="margin-left:20%">
         <div class="col-md-8 col-xs-12">
@@ -36,8 +37,9 @@
                                         <div style="float:left;display: inline-flex" data-ng-repeat="i in [] | range:item.ppp_pkg_allow">
                                             <div>
                                                 <input type="number" style="width: 80px" id="packageId_{{$parent.$index}}_{{i}}" name="packageId_{{$parent.$index}}_{{i}}" ng-model="mapPackage[item.ppp_id][i]['packageId']" class="form-control" ng-blur="checkValidPackage( mapPackage[item.ppp_id][i],  $parent.$index + '_' + i );" ng-keypress="isNumber($event)" min="0" required/>
-                                                <span style="color: red" ng-show="mapPackageForm.$submitted || mapPackageForm.packageId_{{$parent.$index}}_{{i}}.$dirty">
-                                                    <span ng-show="mapPackageForm.packageId_{{$parent.$index}}_{{i}}.$error.required">This field is required.</span>
+                                               sub {{mapPackageForm.$submitted}} dir {{mapPackageForm.packageId_0_1.$pristine}}
+                                                <span style="color: red" id="xysz" ng-show="mapPackageForm.$submitted || mapPackageForm.packageId_{{$parent.$index}}_{{i}}.$dirty">
+                                                    <span   ng-show="mapPackageForm.packageId_{{$parent.$index}}_{{i}}.$error.required">This field is required.</span>
                                                 </span>
 
                                             </div>
