--- a/public/partials/map-package.html
+++ b/public/partials/map-package.html
@@ -37,9 +37,9 @@
                                         <div style="float:left;display: inline-flex" data-ng-repeat="i in [] | range:item.ppp_pkg_allow">
                                             <div>
                                                 <input type="number" style="width: 80px" id="packageId_{{$parent.$index}}_{{i}}" name="packageId_{{$parent.$index}}_{{i}}" ng-model="mapPackage[item.ppp_id][i]['packageId']" class="form-control" ng-blur="checkValidPackage( mapPackage[item.ppp_id][i],  $parent.$index + '_' + i );" ng-keypress="isNumber($event)" min="0" required/>
-                                               sub {{mapPackageForm.$submitted}} dir {{mapPackageForm.packageId_0_1.$pristine}}
+
                                                 <span style="color: red" id="xysz" ng-show="mapPackageForm.$submitted || mapPackageForm.packageId_{{$parent.$index}}_{{i}}.$dirty">
-                                                    <span   ng-show="mapPackageForm.packageId_{{$parent.$index}}_{{i}}.$error.required">This field is required.</span>
+                                                    <span  id="package_{{$parent.$index}}_{{i}}" ng-show="mapPackageForm.packageId_{{$parent.$index}}_{{i}}.$error.required">This field is required.</span>
                                                 </span>
 
                                             </div>
