--- a/public/partials/map-package.html
+++ b/public/partials/map-package.html
@@ -1,4 +1,9 @@
-{{mapPackageForm.$valid}}
+<div class="content-header">
+    <h2 class="content-header-title">Map Packages</h2>
+</div>
+<div class="text-center">
+   {{head_page_dc }}> {{head_page_type}} > {{head_page_title}} >  {{head_page_file}}
+</div>
 <form method="post" class="form-horizontal" role="form" name="mapPackageForm" data-ng-submit="submitForm(mapPackageForm.$valid)" novalidate>
     <div class="row" style="margin-left:20%">
         <div class="col-md-8 col-xs-12">
