minor changes in messages

--- a/public/partials/PageListing.html
+++ b/public/partials/PageListing.html
@@ -16,7 +16,7 @@
                         <div class="col-md-3 col-xs-3"></div>
                         <div class="col-md-6 col-xs-6">
                         <div class="form-group">
-                            <label class="col-sm-3 control-label"><span class="asterisk">*</span>Store Channel</label>
+                            <label class="col-sm-3 control-label"><span class="asterisk">*</span>Store Channel:</label>
                             <div class="col-sm-9">
                                 <span class="ui-select">
                                     <select name="distributionChannel" class="form-control"  data-ng-model="selectedDistributionChannel" data-ng-options="item.cd_id as item.cd_name for item in distributionChannels" required>
@@ -29,7 +29,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="pageType" class="col-sm-3 control-label"><span class="asterisk">*</span>Select Page Type</label>
+                            <label for="pageType" class="col-sm-3 control-label"><span class="asterisk">*</span>Select Page Type:</label>
                             <div class="col-sm-9">
                                 <span class="ui-select">
                                     <select name="pageType" class="form-control"  data-ng-model="selectedPageType" data-ng-options="item.cd_id as item.cd_name for item in pageType" required>
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="pagetitle" class="col-sm-3 control-label">Page Title : </label>
+                            <label for="pagetitle" class="col-sm-3 control-label">Page Title: </label>
                             <div class="col-sm-9">
                                 <input type="text" name="pagetitle" class="form-control" placeholder="Page title" data-ng-model="selectedPageTitle" >
                                 <!--<span style="color: red" ng-show="pageForm.$submitted || pageForm.pagetitle.$dirty">-->
