--- a/public/partials/add-page.html
+++ b/public/partials/add-page.html
@@ -14,7 +14,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="col-sm-3 control-label"><span class="asterisk">*</span>Store Channel</label>
+                            <label class="col-sm-3 control-label"><span class="asterisk">*</span>Store Channel:</label>
                             <div class="col-sm-9">
                                 <span class="ui-select">
                                     <select name="distributionChannel" class="form-control"  data-ng-model="selectedDistributionChannel" data-ng-options="item.cd_id as item.cd_name for item in distributionChannels" required>
@@ -27,7 +27,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="pagetitle" class="col-sm-3 control-label"><span class="asterisk">*</span>Page Title : </label>
+                            <label for="pagetitle" class="col-sm-3 control-label"><span class="asterisk">*</span>Page Title: </label>
                             <div class="col-sm-9">
                                 <input type="text" name="pagetitle" class="form-control" 
                                 placeholder="Page Title" data-ng-model="pagetitle" required>
@@ -38,7 +38,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="pagefilename" class="col-sm-3 control-label"><span class="asterisk">*</span>Page File Name </label>
+                            <label for="pagefilename" class="col-sm-3 control-label"><span class="asterisk">*</span>Page [File] Name: </label>
                              <div class="col-sm-9">
                                 <input type="text" name="pagefilename" class="form-control" placeholder="e.g. home.php" data-ng-model="pagefilename" required>
                                 <input type="hidden" name="ld_Id" class="form-control" data-ng-model="PlanId">
@@ -48,7 +48,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="pagetype" class="col-sm-3 control-label"><span class="asterisk">*</span>Select Page Type</label>
+                            <label for="pagetype" class="col-sm-3 control-label"><span class="asterisk">*</span>Select Page Type:</label>
                             <div class="col-sm-9">
                                 <span class="ui-select">
                                     <select name="pagetype" class="form-control"  data-ng-model="selectedPageTypes" data-ng-options="item.cd_id as item.cd_name for item in PageTypes" required>
