minor changes in message

--- a/public/partials/add-page.html
+++ b/public/partials/add-page.html
@@ -48,7 +48,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="pagetype" class="col-sm-3 control-label"><span class="asterisk">*</span>Select Page Type:</label>
+                            <label for="pagetype" class="col-sm-3 control-label"><span class="asterisk">*</span>Page Type:</label>
                             <div class="col-sm-9">
                                 <span class="ui-select">
                                     <select name="pagetype" class="form-control"  data-ng-model="selectedPageTypes" data-ng-options="item.cd_id as item.cd_name for item in PageTypes" required>
