--- a/public/partials/PageListing.html
+++ b/public/partials/PageListing.html
@@ -29,7 +29,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="pageType" class="col-sm-3 control-label"><span class="asterisk">*</span>Select Page Type:</label>
+                            <label for="pageType" class="col-sm-3 control-label"><span class="asterisk">*</span>Page Type:</label>
                             <div class="col-sm-9">
                                 <span class="ui-select">
                                     <select name="pageType" class="form-control"  data-ng-model="selectedPageType" data-ng-options="item.cd_id as item.cd_name for item in pageType" required>
