--- a/public/partials/map-package.html
+++ b/public/partials/map-package.html
@@ -59,7 +59,7 @@
                                 <strong>No page data found for mapping.<strong>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row" ng-hide="mappingData.length == 0">
                             <div class="col-md-12">
                                 <div class="col-md-offset-5 col-md-7" >
                                     <button type="submit" class="btn btn-primary btn-w-md" ng-hide="offerPlan.length == 0 && valuePlans.length == 0" title="Save">Submit</button>
