--- a/views/index.ejs
+++ b/views/index.ejs
@@ -93,5 +93,6 @@
 <script src="scripts/services/listpage.service.js"></script>
 
 <script src="scripts/directives/rangeDirective.js"></script>
+<script src="assets\scripts\bootstrap.min.js"></script>
 
 </html>
